tests/compError/notLeakingAlias.iota
// compError
// error: alias 'x' does not exist
// line:6 -> here

b = @y(builtin.Float64)
	x

a = @x(builtin.Float64)
	b 1